[package]
name = "safe-postgres"
description = "Wrapper of tokio-postgres for executing SQL more safer out of user jurisdiction."
keywords = ["sql", "postgres", "PostgreSQL"]
categories = ["database"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
