[package]
name = "safety-postgres"
description = "Wrapper of tokio-postgres for executing SQL more safer out of user jurisdiction."
authors = ["SHIMA<shima@little-tabby.com>"]
keywords = ["sql", "postgres", "PostgreSQL", "safety-postgres"]
categories = ["database"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
documentation = "https://docs.rs/safety-postgres/"
homepage = "https://crates.io/crates/safety-postgres"
repository = "https://github.com/SHIMA0111/safety-postgres"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
testcontainers = "0.15"
futures = "0.3"
